# Lunar-Titanium-Magnetism

./: .gitignore  Analysis-Plan.md  CITATION.cff  Data-Sources.md  Fallacy-Audit.md  LICENSE  Pre-Registration.md  README.md  References.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Paper-and-Pitch/: Exploratory-Robustness.md  Pitch.pptx  README.md  Research-Paper.typ  Seed-Robustness.md  exploratory_robustness.csv  h1_tio2_power_analysis.json  h2_antipode_low_strength_extension.json  impact_antipode_benchmark_calibration.json  metrics.json  positive_control_power_analysis.json  seed_robustness.csv
src/: __init__.py  acquire.py  basins.py  config.py  convert_idl_csv_to_tif.py  convert_jaxa_dat_to_tif.py  data_acquisition.py  download_tio2.py  evaluation.py  exploratory.py  generate_svm_grid.pro  inference.py  ingest.py  interpretability.py  merge_tio2.py  modeling.py  power_analysis.py  preprocessing.py  rasterize_age.py  report_generator.py  resample_gravity.py  seed_robustness.py  spatial.py  spatial_stats.py  terrain_sensitivity.py  transparent_analysis.py
tests/: test_acquire.py  test_exploratory.py  test_ingest.py  test_metadata_integrity.py  test_pipeline.py  test_power_analysis.py  test_runtime_hardening.py  test_scientific_claims.py  test_spatial.py  test_terrain_sensitivity.py  test_transparent_analysis.py
